deploy/deploy/ingress_alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bold-ingress
  namespace: bold-services
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health-check
    alb.ingress.kubernetes.io/auth-session-cookie: bold.k8s.pod.id
    alb.ingress.kubernetes.io/auth-session-timeout: "600"
    #alb.ingress.kubernetes.io/certificate-arn: ""
    #alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/group.name: "bold-services"
spec:
  #tls:
  #- hosts:
    #- example.com
    #secretName: bold-tls
  rules:
  - #host: -example.com
    http:
      paths:
      - path: "/reports/api/*"
        pathType: ImplementationSpecific
        backend:
          service:
            name: reports-api-service
            port:
              number: 6005
      - path: "/reports/jobs/*"
        pathType: ImplementationSpecific
        backend:
          service:
            name: reports-jobs-service
            port:
              number: 6006
      - path: "/reports/designer/*"
        pathType: ImplementationSpecific
        backend:
          service:
            name: reports-dataservice-service
            port:
              number: 6007
      - path: "/reports/*"
        pathType: ImplementationSpecific
        backend:
          service:
            name: reports-web-service
            port:
              number: 6004
      - path: "/api/*"
        pathType: ImplementationSpecific
        backend:
          service:
            name: id-api-service
            port:
              number: 6001
      - path: "/ums/*"
        pathType: ImplementationSpecific
        backend:
          service:
            name: id-ums-service
            port:
              number: 6002
      - path: "/*"
        pathType: ImplementationSpecific
        backend:
          service:
            name: id-web-service
            port:
              number: 6000
